--- a/TAREA2.SPF_RVL_Gerardo_NV_Dayana.ipynb
+++ b/TAREA2.SPF_RVL_Gerardo_NV_Dayana.ipynb
@@ -161,16 +161,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('34587', 163.8),\n",
+       " ('98762', 284.0),\n",
+       " ('77226', 108.85000000000001),\n",
+       " ('88112', 84.97)]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Código de solución \n",
-    ".\n",
-    ".\n",
-    ".\n",
-    ".\n",
-    "\n"
+    "\n",
+    "orders = [ [\"34587\", \"Learning Python, Mark Lutz\", 4, 40.95], \n",
+    "           [\"98762\", \"Programming Python, Mark Lutz\", 5, 56.80], \n",
+    "           [\"77226\", \"Head First Python, Paul Barry\", 3,32.95],\n",
+    "           [\"88112\", \"Einführung in Python3, Bernd Klein\", 3, 24.99]]\n",
+    "\n",
+    "\n",
+    "costo = [4*40.95, 5*56.80, 3*32.95, 3*24.99]\n",
+    "costo_total= list(map(lambda x: x + 10 if x<100 else x, costo))\n",
+    "num =list(map(lambda x,y:(x[0],y),orders,costo_total))\n",
+    "num\n"
    ]
   },
   {
@@ -241,16 +261,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 688.3299999999999],\n",
+       " [2, 504.46000000000004],\n",
+       " [3, 374.79999999999995],\n",
+       " [4, 502.57]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Código de solución \n",
-    ".\n",
-    ".\n",
-    ".\n",
-    ".\n",
-    "\n"
+    "from functools import reduce \n",
+    "orders1 = [[1, (\"5464\", 4, 9.99), (\"8274\",18,12.99), (\"9744\", 9, 44.95)], \n",
+    "          [2, (\"5464\", 9, 9.99), (\"9744\", 9, 44.95)],\n",
+    "          [3, (\"5464\", 9, 9.99), (\"88112\", 11, 24.99)],\n",
+    "          [4, (\"8732\", 7, 11.99), (\"7733\",11,18.99), (\"88112\", 5, 39.95)] ]\n",
+    "\n",
+    "\n",
+    "sol1 = list(map(lambda x: [x[0]] +\n",
+    "                list(map(lambda y: y[1]*y[2] if y[1]*y[2] >= 100 else y[1]*y[2]+10, x[1:])), orders1))\n",
+    "\n",
+    "sol2 = list(map(lambda x: [x[0]] + \n",
+    "               [reduce(lambda x,y: x+y, x[1:])], sol1))\n",
+    "sol2\n"
    ]
   },
   {
@@ -355,17 +397,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       0      1       2      3\n",
+      "0  34587  98762   77226  88112\n",
+      "0  163.8    284  108.85  84.97\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Código de solución \n",
+    "# NUMERO 1\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "def x(y):\n",
+    "    if y < 100:\n",
+    "        y += 10\n",
+    "    return y\n",
+    "\n",
+    "E1=pd.DataFrame(data=orders)\n",
+    "E2 = [(E1.iloc[:,-2]*E1.iloc[:,-1]).apply(x)]\n",
+    "E3 = [(E1.iloc[:,0])]\n",
+    "\n",
+    "E3= pd.DataFrame(E3)\n",
+    "E3=E3.append(E2)\n",
+    "print(E3)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Código de solución \n",
-    ".\n",
-    ".\n",
-    ".\n",
-    ".\n",
+    "# NUMERO 2\n",
     "\n",
-    "\n"
+    "orders1 = [[1, \"5464\", 4, 9.99, \"8274\",18,12.99, \"9744\", 9, 44.95], \n",
+    "           [2, \"5464\", 9, 9.99, \"9744\", 9, 44.95, 0,0,0],\n",
+    "           [3, \"5464\", 9, 9.99, \"88112\", 11, 24.99, 0,0,0],\n",
+    "           [4, \"8732\", 7, 11.99, \"7733\",11,18.99, \"88112\", 5, 39.95]]\n",
+    "E4=pd.DataFrame(orders1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0    678.33\n",
+      "1    494.46\n",
+      "2    364.80\n",
+      "3    492.57\n",
+      "dtype: float64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def x(y):\n",
+    "    if y < 100:\n",
+    "        y += 10\n",
+    "    return y\n",
+    "\n",
+    "E5= [((E4.iloc[:,2]*E4.iloc[:,3])+(E4.iloc[:,5]*E4.iloc[:,6])+(E4.iloc[:,8]*E4.iloc[:,9])).apply(x)]\n",
+    "print(E5)"
    ]
   },
   {
