--- a/TAREA2.SPF_RVL_Gerardo_NV_Dayana.ipynb
+++ b/TAREA2.SPF_RVL_Gerardo_NV_Dayana.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        " ('88112', 84.97)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        " ('88112', 84.97)]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        " [4, 502.57]]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        " [4, 502.57]]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,35 +309,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        0 Order number\n",
-      "0   163.8        34587\n",
-      "1     284        98762\n",
-      "2  108.85        77226\n",
-      "3   84.97        88112\n",
-      "[0    678.33\n",
-      "1    494.46\n",
-      "2    364.80\n",
-      "3    492.57\n",
-      "dtype: float64]\n"
+      "        0 Order number Order number\n",
+      "0   163.8        34587        34587\n",
+      "1     284        98762        98762\n",
+      "2  108.85        77226        77226\n",
+      "3   84.97        88112        88112\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0    678.33\n",
+       " 1    494.46\n",
+       " 2    364.80\n",
+       " 3    492.57\n",
+       " dtype: float64]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Código de solución \n",
     "\n",
     "df1=pd.DataFrame(columns=[\"Order number\",\"Book Title and Author\",\"Quantity\",\"Price per Item\"], data=orders)\n",
-    "res3_1=[(df1.iloc[:,-2]*df1.iloc[:,-1]).apply(lambda x: x if x>=100 else (x+10))]\n",
+    "resol=[(df1.iloc[:,-2]*df1.iloc[:,-1]).apply(lambda x: x if x>=100 else (x+10))]\n",
     "#sol3_1=sol3_1.append(ej1.iloc[:,0])\n",
-    "res3_1=pd.DataFrame(res3_1)\n",
-    "res3_1=res3_1.append(df1.iloc[:,0])\n",
-    "print(res3_1.T)\n",
+    "resol=pd.DataFrame(res3_1)\n",
+    "resol=resol.append(df1.iloc[:,0])\n",
+    "print(resol.T)\n",
     "\n",
     "#ejercicio 2\n",
     "orders2 = [[1, \"5464\", 4, 9.99, \"8274\",18,12.99, \"9744\", 9, 44.95], \n",
@@ -346,8 +355,8 @@
     "           [4, \"8732\", 7, 11.99, \"7733\",11,18.99, \"88112\", 5, 39.95]]\n",
     "df2=pd.DataFrame(orders2)\n",
     "\n",
-    "res3_2= [((df2.iloc[:,2]*df2.iloc[:,3])+(df2.iloc[:,5]*df2.iloc[:,6])+(df2.iloc[:,8]*df2.iloc[:,9])).apply(lambda x: x if x>=100 else (x+10))]\n",
-    "print(res3_2)\n"
+    "resel= [((df2.iloc[:,2]*df2.iloc[:,3])+(df2.iloc[:,5]*df2.iloc[:,6])+(df2.iloc[:,8]*df2.iloc[:,9])).apply(lambda x: x if x>=100 else (x+10))]\n",
+    "resel\n"
    ]
   },
   {
@@ -366,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +505,7 @@
        " 'science']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,52 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([35.97387961379455,\n",
-       "  63.211195349983264,\n",
-       "  73.90387696517755,\n",
-       "  36.982512376595906,\n",
-       "  68.75395211338406,\n",
-       "  45.86132066984196,\n",
-       "  36.58307493022292,\n",
-       "  56.322083650154724,\n",
-       "  33.9621930206693,\n",
-       "  45.29071317816652,\n",
-       "  74.86289938282341,\n",
-       "  66.51091382521807,\n",
-       "  46.831316244170544,\n",
-       "  44.55796498523391],\n",
-       " 46.666666666666664)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Código de solución \n",
-    "r=list(filter(lambda x: (32< x < 80) , temperatures))\n",
-    "porcentaje=(len(r)/len(list(temperatures)))\n",
-    "\n",
-    "r, porcentaje*100"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### SOLUCIÓN DAYANA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +560,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([35.97387961379455,\n",
+       "  63.211195349983264,\n",
+       "  73.90387696517755,\n",
+       "  36.982512376595906,\n",
+       "  68.75395211338406,\n",
+       "  45.86132066984196,\n",
+       "  36.58307493022292,\n",
+       "  56.322083650154724,\n",
+       "  33.9621930206693,\n",
+       "  45.29071317816652,\n",
+       "  74.86289938282341,\n",
+       "  66.51091382521807,\n",
+       "  46.831316244170544,\n",
+       "  44.55796498523391],\n",
+       " 46.666666666666664)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Código de solución \n",
+    "r=list(filter(lambda x: (32< x < 80) , temperatures))\n",
+    "porcentaje=(len(r)/len(list(temperatures)))\n",
+    "\n",
+    "r, porcentaje*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SOLUCIÓN DAYANA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 35.97387961  99.13294268  92.6178302   99.69549478  63.21119535\n",
+      "  73.90387697  95.50028838  99.21476553  36.98251238 101.45813729\n",
+      " 100.5917418   89.38159435  89.52156589  83.8084752   28.37990868\n",
+      "  68.75395211  45.86132067  36.58307493  56.32208365  33.96219302\n",
+      "  45.29071318  74.86289938  66.51091383  88.19316186  94.26635864\n",
+      "  46.83131624 109.60744472 109.68427993  44.55796499  92.84146259]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.random.seed(55555)\n",
+    "temperatures = np.random.uniform(25,110,30)\n",
+    "print(temperatures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -650,13 +684,15 @@
        "array([0, 2])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Código de solución \n",
+    "np.random.seed(55555)\n",
+    "point_xy = np.random.randint(0,100,[30,2])\n",
     "result=np.minimum.reduce(point_xy)\n",
     "print(result)\n",
     "result"
@@ -671,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
